samples/_failures_safe/1761655793_fbbb88_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e39d038.c: In function ‘main’:
./samples/SAFE/__tmp_0e39d038.c:138:25: error: missing terminating " character
  138 |         fprintf(stderr, "Error reading filename\n
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0e39d038.c:138:9: error: expected expression at end of input
  138 |         fprintf(stderr, "Error reading filename\n
      |         ^~~~~~~
./samples/SAFE/__tmp_0e39d038.c:138:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0e39d038.c:138:9: error: expected declaration or statement at end of input
